# unitbench

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  PRODUCT.md  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release-parity.yml
.impeccable/critique/: 2026-07-04T07-06-41Z__src-app.md
docs/: 2026-06-28-dr-dspy-publish.md  2026-06-28-initial-viewer-goal.md  2026-06-28-viewer-status.md  2026-06-30-aspirations-and-roadmap.md  issues.md  signed-bundle-integrity.md
docs/agents/: domain.md  planning.md
docs/plans/: 01-aggregation-view-and-heatmap.md  04-checkbox-filters-small-sets.md  05-r0-fixture-shapes.md  06-r1-sweep-dashboard.md  06-r2-extraction-flow.md  06-r3-compression-results.md  06-r4-pipeline-flow.md  06-r5-bootstrap-variance.md  06-r6-headroom-heatmap.md  done-01-aggregation-view-and-heatmap.md  done-02-heatmap-drag-reorder.md  done-03-heatmap-sort-and-group.md
e2e/: dashboard.spec.ts  graph-viewer.spec.ts  heatmap.spec.ts  home.spec.ts  lab-and-lanes.spec.ts  parser-playground.spec.ts  prediction-detail.spec.ts  provider-playground.spec.ts  replay.spec.ts  table-shortcuts.spec.ts
scripts/: check-delivery-parity.mjs  check-delivery-preflight.mjs  gen-api.mjs  gen-api.test.ts  gen-graph-schema.mjs  generate-platform-json-checksum-vectors.py  generate-platform-numeric-vectors.py  vercel-install.mjs  vercel-install.test.ts
src/app/: globals.css  (+2 more)
tests/: test_dr_dspy_publish.py  test_dr_dspy_v1_publish.py  test_sweep_metrics.py
(+277 files in other folders)
