[project]
name = "unitbench-publish"
version = "0.1.0"
description = "Publish local experiment summaries to Unitbench Neon tables."
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.3.0",
  "pydantic>=2.12.0",
  "typer>=0.20.0",
]

[project.scripts]
unitbench-publish = "unitbench_publish.cli:app"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/unitbench_publish"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

